--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
     "micro": "^9.3.3",
